k8s/booking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: parking

spec:
  replicas: 2

  selector:
    matchLabels:
      app: booking-service

  template:
    metadata:
      labels:
        app: booking-service

    spec:
      containers:
        - name: booking-service
          image: smartparkingmanagement-booking-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8003

---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: parking

spec:
  selector:
    app: booking-service

  ports:
    - port: 8003
      targetPort: 8003

  type: ClusterIP
