k8s/parking-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parking-service
  namespace: parking

spec:
  replicas: 2

  selector:
    matchLabels:
      app: parking-service

  template:
    metadata:
      labels:
        app: parking-service

    spec:
      containers:
        - name: parking-service
          image: smartparkingmanagement-parking-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8002

---
apiVersion: v1
kind: Service
metadata:
  name: parking-service
  namespace: parking

spec:
  selector:
    app: parking-service

  ports:
    - port: 8002
      targetPort: 8002

  type: ClusterIP
